Fix spacing

--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@ body {
 }
 
 .hero {
-    padding: 40px 30% 40px 40px;
+    padding: 10px 30% 40px 40px;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -122,6 +122,15 @@ label {
     position: relative;
 }
 
+.button-container {
+    display: flex;
+    align-items: center;
+    text-align: center;
+    flex: 1;
+    margin-left: 36px;
+    margin-top: 24px;
+}
+
 .create-account-button {
     width: 25%;
     min-width: 10%;
@@ -141,15 +150,6 @@ label {
 
 .returning-user {
     flex: 1;
-}
-
-.button-container {
-    display: flex;
-    align-items: center;
-    text-align: center;
-    flex: 1;
-    margin-left: 36px;
-    margin-top: 18px;
 }
 
 /* validation */
